# amazonq-game-challange

./: README.md
doc/: Phase2-Report.md  Phase3_Completion_Report.md  Phase4_Report.md  Phase5_Report.md  Project_Completion_Report.md  Report.md  Rules.md  Specification.md  Task.md
docs/: .htaccess  README.md  Rules.md  terra_lock.wasm
terra_lock/: .gitignore  Cargo.toml  README.md
terra_lock/src/: game.rs  lib.rs  main.rs
terra_lock/web/: index.html
