[package]
name = "terra_lock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"          # サイズ最適化
lto = true               # リンク時最適化
codegen-units = 1        # 単一コード生成
panic = "abort"          # パニック時即座終了

[dependencies]
macroquad = "0.3"

# WebAssembly用依存関係
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }

# ネイティブ用依存関係
pollster = { version = "0.3", optional = true }

[features]
default = ["native"]
web = ["wasm-bindgen", "wasm-bindgen-futures", "console_error_panic_hook", "console_log", "log"]
native = ["pollster"]
